# rival-agent-onboard

./: Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
app/: agent.py  analytics.py  briefing.py  config.py  intent.py  main.py  models.py  renderer.py  scheduler.py  state.py  template.py  verifier.py
app/handlers/: admin.py  freeform.py  people.py  progress.py  schedule.py  tasks.py  welcome.py
templates/: onboarding_v2.yaml
